just edited the readme to better reflect the status of this project.

--- a/README
+++ b/README
@@ -1,1 +1,5 @@
-This project is for a Senior Research class at Shippensburg University. As I have no practical knowledge of how the Linux desktop works, I can't guarantee the finished product's compatibility with existing desktop managers. Additionally, this project does not intend to produce a full desktop manager, but merely a desktop interface; management of windows, generation of panels, navigation of the filesystem, etc. are likely to be managed by the user's default applications. This is an independent work done by an amateur, and I take no responsibility if it screws up your system.
+This project is for a Senior Research class at Shippensburg University. Originally, this program was to be a new desktop manager, one that would be able to show the user's entire filesystem on the desktop. A lot changed during development, and now it's become more of a filesystem navigator that looks nice when full-screen.
+
+Navigation is done through the galaxy in the center, which is your filesystem's hierarchy from a given directory on down. Clicking on sectors of the galaxy (highlighted for ease of use) will navigate to that directory, which results in the galaxy being rebuilt using only the contents of that sector.
+
+I'm currently working on another navigation mode, one that would rely on tags to sort files, like a music library, or an online image board. The biggest problem I foresee at the moment is the fact that, aside from media files, most files aren't automatically tagged in the average filesystem. Though it's not my intent to build a generic file tagger, such a program may be necessary in the future, if this system is to be anywhere near practical.
