updated the readme

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-This project is for a Senior Research class at Shippensburg University. Originally, this program was to be a new desktop manager, one that would be able to show the user's entire filesystem on the desktop. A lot changed during development, and now it's become more of a filesystem navigator that looks nice when full-screen.
+Originally created for a Senior Research class at Shippensburg University, this application is a new file system navigator that represents the user's files as stars in a galaxy; it was designed to investigate alternatives to the desktop metaphor. The application, and a research paper written parallel to its development, were presented at PACISE 2012, as one of the student research presentations.
 
-Navigation is done through the galaxy in the center, which is your filesystem's hierarchy from a given directory on down. Clicking on sectors of the galaxy (highlighted for ease of use) will navigate to that directory, which results in the galaxy being rebuilt using only the contents of that sector.
+Navigation is done through the galaxy in the center, which is your file system's hierarchy from a given directory on down. Clicking on sectors of the galaxy (highlighted for ease of use) will navigate to that directory, which results in the galaxy being rebuilt using only the contents of that sector.
 
-I'm currently working on another navigation mode, one that would rely on tags to sort files, like a music library, or an online image board. The biggest problem I foresee at the moment is the fact that, aside from media files, most files aren't automatically tagged in the average filesystem. Though it's not my intent to build a generic file tagger, such a program may be necessary in the future, if this system is to be anywhere near practical.
+A second mode of navigation, Tag mode, has been developed, but it is clunky, and requires manual creation of files to house the tags. If development is continued in the future, this will be largely replaced with ID3 for audio and XMP for images. Tagging of document/plain-text/executable files is under investigation.
